Add Front-End pages for Web-Based image classification

--- a/backend/views/layout.pug
+++ b/backend/views/layout.pug
@@ -28,7 +28,9 @@ html
       li
         a(href='/auto') Data Collection
       li
-        a(href='/check') Manual Checking
+        a(href='/check') Manual Text Checking
+      li
+        a(href='/checkImage') Manual Image Checking
     nav.grey.darken-4(role="navigation")
       .nav-wrapper.container
         a#logo-container.brand-logo(href="/") VisCrime
