--- a/backend/views/verify.pug
+++ b/backend/views/verify.pug
@@ -10,7 +10,7 @@ block content
 		.section
 			.row
 				.col.s12
-					h4 Manual Checking
+					h4 Manual Text Checking
 					p Your input will aid the NLP model in learning how to recognise tweets.
 					p
 						| You have checked a total of 
