--- a/backend/views/layout.pug
+++ b/backend/views/layout.pug
@@ -48,7 +48,7 @@ html
               i.fas.fa-search-plus.viscrime-navicon
               span Search Crime Images  
           li
-            a.valign-wrapper(href="/lookup/api")
+            a.valign-wrapper(href="/visualisations")
               i.fas.fa-chart-bar
               span(style="padding-left:5px") Visualisations  
           li
