WIP: Add new deckgl js file

--- a/backend/views/mixins/dataPanel.pug
+++ b/backend/views/mixins/dataPanel.pug
@@ -30,6 +30,10 @@ mixin dataPanel
 									label
 										input(type="radio" name="preset-select" value="both" onClick="renderLayers()")
 										span Both
+								p
+									label
+										input(type="radio" name="preset-select" value="tweet-density" onClick="renderLayers()")
+										span Machine Learning
 			li.active#menu-tweet-density
 				.collapsible-header
 					.container(style="margin: 0; width: 100%;")
