WIP: Update deckmap frontend

--- a/backend/views/mixins/dataPanel.pug
+++ b/backend/views/mixins/dataPanel.pug
@@ -32,7 +32,7 @@ mixin dataPanel
 										span Both
 								p
 									label
-										input(type="radio" name="preset-select" value="tweet-density" onClick="renderLayers()")
+										input(type="radio" name="preset-select" value="machine-learning" onClick="renderLayers()")
 										span Machine Learning
 			li.active#menu-tweet-density
 				.collapsible-header
