--- a/backend/views/deckmap.pug
+++ b/backend/views/deckmap.pug
@@ -24,4 +24,5 @@ block content
 	script(type="text/javascript" src="https://cdn.jsdelivr.net/npm/lodash@4.17.11/lodash.min.js")
 	
 	script(type="text/javascript" src="./scripts/deckgl_render.js")
+	script(type="text/javascript" src="./scripts/deckgl_new.js")
 	link(rel="stylesheet" href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.44.1/mapbox-gl.css")
