--- a/backend/views/deckmap.pug
+++ b/backend/views/deckmap.pug
@@ -13,8 +13,9 @@ block content
 	#map-container
 		#deckmap
 		button#toggle-panels(class="waves-effect waves-light btn-small" onClick="togglePanels()") Hide Panels
-		+dataPanel
-		+statsPanel
+		.row
+			+dataPanel
+			+statsPanel
 		#tooltip(style="visibility: hidden")
 
 	script(type="text/javascript" src="https://unpkg.com/deck.gl@~5.2.0/deckgl.min.js")
@@ -24,5 +25,4 @@ block content
 	script(type="text/javascript" src="https://cdn.jsdelivr.net/npm/lodash@4.17.11/lodash.min.js")
 	
 	script(type="text/javascript" src="./scripts/deckgl_render.js")
-	script(type="text/javascript" src="./scripts/deckgl_new.js")
 	link(rel="stylesheet" href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.44.1/mapbox-gl.css")
