LOOKS: Display all images on tooltip

--- a/backend/views/mixins/dataPanel.pug
+++ b/backend/views/mixins/dataPanel.pug
@@ -29,7 +29,7 @@ mixin dataPanel
 								p
 									label
 										input(type="radio" name="preset-select" value="both" onClick="renderLayers()")
-										span Both
+										span Trajectories and Crimes
 								p
 									label
 										input(type="radio" name="preset-select" value="machine-learning" onClick="renderLayers()")
