--- a/backend/views/imageUpload.pug
+++ b/backend/views/imageUpload.pug
@@ -10,57 +10,58 @@ block content
 		.section
 			.row
 				.col.s12
-					h4 Manual Image Checking
+					h4 Image Upload
 					p Your input will aid the NLP model in learning how to recognise images.	
 			.row
-				.col.s12
-						.row
-							.col-sm-6
-								form(action='/checkImage' method='POST')
-										input(type='text' name='hash' value=image+'.jpg' hidden='')
-										h6 Type of Crime
-										p
-											label
-												
-												input(name='crimes', type='checkbox', value='1')
-												span NoCrime
-										p
-											label
-												input(name='crimes', type='checkbox', value='2')
-												span Assault
-										p
-											label
-												input(name='crimes', type='checkbox', value='4')
-												span Theft
-										p
-											label
-												input(name='crimes', type='checkbox', value='8')
-												span Gun
-										p
-											label
-												input(name='crimes', type='checkbox', value='16')
-												span Drugs
-										p
-											label
-												input(name='crimes', type='checkbox', value='32')
-												span Property Damage
-										p
-											label
-												input(name='crimes', type='checkbox', value='64')
-												span Homicide
-										p
-											label
-												input(name='crimes', type='checkbox', value='128')
-												span Vehicular
-										p
-											label
-												input(name='crimes', type='checkbox', value='256')
-												span Sex Offence
-										p
-											label
-												input(name='crimes', type='checkbox', value='512')
-												span Hostage
-										button.btn.waves-effect.waves-light.green(type='submit') SUBMIT
-								.col-sm-6
-										h1.text-center
-											img.img-fluid(src=image)
+				.col.s6
+						form(action='/uploadImage' method='POST')
+							p
+								label
+									input(type="file", name="file")
+									span File
+							h6 Type of Crime
+							p
+								label
+									
+									input(name='crimes', type='checkbox', value='1')
+									span NoCrime
+							p
+								label
+									input(name='crimes', type='checkbox', value='2')
+									span Assault
+							p
+								label
+									input(name='crimes', type='checkbox', value='4')
+									span Theft
+							p
+								label
+									input(name='crimes', type='checkbox', value='8')
+									span Gun
+							p
+								label
+									input(name='crimes', type='checkbox', value='16')
+									span Drugs
+							p
+								label
+									input(name='crimes', type='checkbox', value='32')
+									span Property Damage
+							p
+								label
+									input(name='crimes', type='checkbox', value='64')
+									span Homicide
+							p
+								label
+									input(name='crimes', type='checkbox', value='128')
+									span Vehicular
+							p
+								label
+									input(name='crimes', type='checkbox', value='256')
+									span Sex Offence
+							p
+								label
+									input(name='crimes', type='checkbox', value='512')
+									span Hostage
+							button.btn.waves-effect.waves-light.green(action="submit") SUBMIT
+				.col-sm-6
+					img#imageDisplay.img-fluid(hidden=true)
+	script(type="text/javascript" src="./scripts/imageUpload.js")
