--- a/backend/views/layout.pug
+++ b/backend/views/layout.pug
@@ -24,13 +24,15 @@ html
         a(href='/auto') Data Collection
       li
         a(href='/check') Manual Checking
+      li
+        a(href='/uploadImage') Image Upload
     ul#dropdown2.dropdown-content
       li
         a(href='/auto') Data Collection
       li
         a(href='/check') Manual Text Checking
       li
-        a(href='/checkImage') Manual Image Checking
+        a(href='/uploadImage') Image Upload
     nav.grey.darken-4(role="navigation")
       .nav-wrapper.container
         a#logo-container.brand-logo(href="/") VisCrime
