FIX: Youtube video uses embed page

--- a/backend/views/about.pug
+++ b/backend/views/about.pug
@@ -16,7 +16,7 @@ block content
 							
 					.col.s12.m6.l6
 						.video-container
-							iframe(width="560" height="315" src="https://www.youtube.com/watch?v=u9cRITQeOSQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen)
+							iframe(width="560" height="315" src="https://www.youtube.com/embed/u9cRITQeOSQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen)
 	.container
 		.section
 			.row.valign-wrapper
