FIX: About page button links

--- a/backend/views/about.pug
+++ b/backend/views/about.pug
@@ -27,8 +27,12 @@ block content
 					p When a column is hovered over it will show the location, number of crimes images, each crime image and its intensity.
 					.row
 						input-field.col.s12
+							a(href="/deckmap")
+								button.btn.waves-effect.waves-light Open Map
+					.row
+						input-field.col.s12
 							a(href="/visualisations")
-								button.btn.waves-effect.waves-light Open Map	
+								button.btn.waves-effect.waves-light Open Visualisations
 				.col.s12.m4.l4.center-align
 					img.responsive-img(src="stylesheets/img/vis_map.PNG") 
 			.divider
