--- a/backend/public/stylesheets/css/style.css
+++ b/backend/public/stylesheets/css/style.css
@@ -306,3 +306,19 @@ h1:not(#map h1) {
 #predSpinner.show {
   visibility: visible;
 }
+
+.container {
+  margin:0 auto;
+  max-width:1280px;
+  width:90%
+ }
+ @media only screen and (min-width: 601px) {
+  .container {
+   width:90%
+  }
+ }
+ @media only screen and (min-width: 993px) {
+  .container {
+   width:90%;
+  }
+ }
