--- a/backend/views/layout.pug
+++ b/backend/views/layout.pug
@@ -70,6 +70,10 @@ html
           i.fas.fa-map-marker-alt.viscrime-navicon
           span Explore 
       li
+        a.valign-wrapper(href="/scan")
+          i.fas.fa-brain.viscrime-navicon
+          span Predict
+      li
         a.valign-wrapper(href="/lookup/api")
           i.fas.fa-search.viscrime-navicon
           span Tweet Lookup  
@@ -77,6 +81,10 @@ html
         a.valign-wrapper(href="/imagesearch")
           i.fas.fa-search-plus.viscrime-navicon
           span Search Crime Images  
+      li
+        a.valign-wrapper(href="/visualisations")
+          i.fas.fa-chart-bar
+          span(style="padding-left:5px") Visualisations  
       li
         a.dropdown-trigger-sidenav.valign-wrapper(href='#' data-target='dropdown2')
           i.fas.fa-cog.viscrime-navicon
