FIX: Fix Image Scan link

--- a/backend/views/about.pug
+++ b/backend/views/about.pug
@@ -60,7 +60,7 @@ block content
 					p It was trained on image captions, the objects in those images (using AWS rekognition) and the images themselves.
 					.row
 						input-field.col.s12
-							a(href="/imagesearch")
+							a(href="/scan")
 								button.btn.waves-effect.waves-light Open Crime Prediction
 
 				.col.s12.m4.l4.center-align
