FIX: Add image search button

--- a/backend/views/about.pug
+++ b/backend/views/about.pug
@@ -44,10 +44,13 @@ block content
 					p We have also adopted the same webui to use a NodeJS backend, and has been implemented into the Viscrime website as the ‘Upload Image’ function.
 
 					.row
-					
 						input-field.col.s12
 							a(href="/check")
-								button.btn.waves-effect.waves-light Open ClassifyBot	
+								button.btn.waves-effect.waves-light Open ClassifyBot
+					.row
+						input-field.col.s12
+							a(href="/imagesearch")
+								button.btn.waves-effect.waves-light Open Image Result Search	
 				.col.s12.m4.l4.center-align
 					img.responsive-img(src="stylesheets/img/classifybot.PNG")
 			.divider
