FIX: Change classifybot url to the image upload page

--- a/backend/views/about.pug
+++ b/backend/views/about.pug
@@ -45,7 +45,7 @@ block content
 
 					.row
 						input-field.col.s12
-							a(href="/check")
+							a(href="/uploadImage")
 								button.btn.waves-effect.waves-light Open ClassifyBot
 					.row
 						input-field.col.s12
